--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,11 @@
-.App {
-  text-align: center;
-}
 
+.container{
+  font-size: 20px;
+  margin-left: 20px;
+}
+input{
+  font-size: 20px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
